# thunes

./: .env.template  .gitignore  .pre-commit-config.yaml  2025-10-02-create-a-new-project-called-thunes.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT_READINESS_STATUS.md  DR_DRILL_QUICKSTART.md  Dockerfile  LAUNCH_READINESS_2025-10-07.md  Makefile  PHASE-13-COMPLETE-STATUS.md  QUICK-START-UNIFIED-MONITORING.md  README.md  SESSION-AUDIT-2025-10-09.md  SESSION_SUMMARY_2025-10-09.md  SETUP.md  START-HERE.md  TIER-3-UNIFIED-MONITORING-COMPLETE.md  docker-compose.monitoring.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-gpu.txt  requirements-research.txt  requirements.txt  walk_forward_test.py  walk_forward_test_hmm.py  walk_forward_test_rsi.py
.claude/: settings.local.json
.github/: CONTRIBUTING.md
docs/: AUDIT-IMPLEMENTATION-2025-10-03.md  AUDIT-TRAIL-FIX-2025-10-07.md  COMPREHENSIVE-ROADMAP-2025.md  CRITICAL-FIXES-2025-10-03.md  FEATURES-COMPREHENSIVE.md  FIXES-APPLIED-2025-10-03.md  GOAL-ORIENTED-IMPROVEMENTS.md  IMPROVEMENTS.md  ML-ENHANCEMENTS-ROADMAP.md  OPERATIONAL-RUNBOOK.md  PHASE-13-DEPLOYMENT-CHECKLIST.md  PHASE-13-PRE-DEPLOYMENT-AUDIT-2025-10-09.md  PHASE-13-RODAGE-CHECKLIST.md  PHASE-15-META-LABELING-SPEC.md  PRODUCTION-ROADMAP.md  README.md  SESSION-PROGRESS-2025-10-03-PART2.md  SESSION-PROGRESS-2025-10-03.md  STRATEGY-METADATA-GUIDE.md  TELEGRAM-SETUP.md  TEST-FIXES-2025-10-07.md  TESTING.md  TESTNET-SETUP-QUICKSTART.md  VALIDATION-REPORT-2025-10-03.md  VENDOR-RISK-ASSESSMENT.md
examples/: xgboost_gpu_demo.py
patches/: 0001-feat-implement-critical-audit-recommendations-system.patch  0002-feat-add-comprehensive-real-time-TUI-trading-dashboa.patch  0003-feat-add-goal-oriented-trading-improvements-profitab.patch  0004-docs-update-CLAUDE.md-create-complete-session-summar.patch  README.md
scripts/: disaster_recovery_drill.md  dr_drill_preflight.sh  post_deployment_verification.sh  pre_deployment_validation.sh  setup_telegram.sh  setup_testnet_credentials.py  system_health_check.py  test_scheduler_integration.py  trading_dashboard.py  update-lab-metrics.py  validate_audit_trail.py  validate_binance.py  validate_risk_config.py  validate_telegram.py  verify_telegram.py
(+124 files in other folders)
